<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical"
        tools:context=".module.auth.mahasiswa.view.MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_32sdp"
            android:src="@drawable/unmer"
            tools:src="@drawable/unmer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sipekan"
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sipekan"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/orange2"
            android:textSize="@dimen/_17ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sipekan"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_27sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/sistem_pelaporan_kuliah_kerja_nyata"
            android:textAllCaps="true"
            android:textColor="@color/orange2"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="@dimen/_270sdp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/universitas_merdeka_pasuruan"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/orange2"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:hint="NPM Mahasiswa"
                android:textColorHint="@color/orange2"
                app:boxBackgroundColor="@color/bluemuda"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/npm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp"
                    tools:text="18.0202.010101.0202" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_below="@id/linear1"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/login"
            android:textColor="@color/gray"
            android:textSize="@dimen/_14ssp"
            app:cornerRadius="@dimen/_12sdp" />


    </RelativeLayout>
</layout>