<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context=".module.mahasiswa.view.MahasiswaActivity">


        <RelativeLayout
            android:id="@+id/atas"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/logo_toolbar"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_12sdp"
                    tools:src="@drawable/unmer" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/kuliah_kerja_nyata"
                        android:textAllCaps="true"
                        android:textColor="@color/orange2"
                        android:textSize="@dimen/_16ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/universitas_merdeka_pasuruan"
                        android:textColor="@color/orange2"
                        android:textSize="@dimen/_11ssp" />

                </LinearLayout>

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/user_pisc" />

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_add_mahasiswa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/atas"
            android:layout_margin="@dimen/_14sdp"
            app:cardBackgroundColor="@color/bluemuda"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_6sdp">

            <RelativeLayout
                android:id="@+id/add_mahasiswa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/img_add_mhs"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:padding="@dimen/_5sdp"
                        tools:src="@drawable/add" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_add_mhs"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/tambah_data_mahasiswa"
                        android:textColor="@color/orange2"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_add_mahasiswa"
            android:layout_margin="@dimen/_12sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/mahasiswa"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tvv"
            android:background="@color/blue">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_mhs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:clipToPadding="false"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_mahasiswa" />

        </RelativeLayout>

    </RelativeLayout>
</layout>