<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context=".module.home.view.mahasiswa.HomeActivity">

        <RelativeLayout
            android:id="@+id/atas"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/logo_toolbar"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/_12sdp"
                    tools:src="@drawable/unmer" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/kuliah_kerja_nyata"
                        android:textAllCaps="true"
                        android:textColor="@color/orange2"
                        android:textSize="@dimen/_16ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/universitas_merdeka_pasuruan"
                        android:textColor="@color/orange2"
                        android:textSize="@dimen/_11ssp" />

                </LinearLayout>

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pictures"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/user_pisc" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_100sdp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <!--  <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/name"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toRightOf="@id/welcome"
              android:layout_marginStart="@dimen/_4sdp"
              android:layout_marginTop="@dimen/_40sdp"
              android:fontFamily="@font/roboto_light"
              android:text="Nama Mahasiswa"
              android:textColor="@color/white"
              android:textSize="@dimen/_12ssp" /> -->

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_120sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/kuliah_kerja_nyata"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_23ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/universitas_merdeka_pasuruan"
                android:textAllCaps="true"
                android:textColor="@color/orange2"
                android:textSize="@dimen/_16ssp" />
        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLaporan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_below="@id/linear1"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:backgroundTint="@color/bluemuda"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_20sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="@dimen/_74sdp"
                    android:layout_height="@dimen/_74sdp"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:src="@drawable/user_pisc" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_24sdp"
                    android:layout_toEndOf="@id/profile_picture"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/orange2"
                    android:textSize="@dimen/_14ssp"
                    tools:text="@tools:sample/full_names" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/npm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_toEndOf="@id/profile_picture"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    tools:text="18.0000.0200348.93" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fakultas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/npm"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_toEndOf="@id/profile_picture"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    tools:text="Fakultas Pertanian" />
            </RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_laporan"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_110sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/upload_laporan"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14ssp"
                app:cornerRadius="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_110sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:fontFamily="@font/atma_medium"
                android:gravity="center"
                android:text="@string/ketsudahupload"
                android:textColor="@color/white"
                android:textSize="@dimen/_17ssp"
                android:visibility="gone" />


        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_pdmti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/app_name"
            android:textColor="@color/orange2"
            android:textSize="@dimen/_12ssp" />


    </RelativeLayout>
</layout>