<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical"
        tools:context=".module.profile.mahasiswa.view.MahasiswaProfileActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/profile"
                android:textColor="@color/orange2"
                android:textSize="@dimen/_16ssp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:padding="@dimen/_2sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/user_pisc" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/orange2"
                android:textSize="@dimen/_14ssp"
                tools:text="Nama Mahasiswa" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/npm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/orange2"
                android:textSize="@dimen/_11ssp"
                tools:text="NPM Mahasiswa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/riwayatlap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_account_circle"
                    android:drawablePadding="@dimen/_12sdp"
                    android:focusable="true"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/riwayat_laporan"
                    android:textColor="@color/orange2"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_baseline_exit_to_app_24"
                    android:drawablePadding="@dimen/_12sdp"
                    android:focusable="true"
                    android:fontFamily="@font/poppins_regular"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/logout"
                    android:textColor="@color/orange2"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</layout>